(Project) remove requirements-scrapy_cloud.txt

--- a/playbooks/roles/scrapinghub-yml/templates/scrapinghub.yml.j2
+++ b/playbooks/roles/scrapinghub-yml/templates/scrapinghub.yml.j2
@@ -1,7 +1,4 @@
 projects:
   default: {{ scrapinghub_project_id }}
 
-stack: {{ scrapinghub_stack }}
-
-requirements:
-  file: requirements-scrapy_cloud.txt
+image: true
